# micro-proto

./: LICENSE  README.md  account.ml  address.ml  bouncer.ml  custodial.ml  dune  error_monad.ml  error_monad.mli  main.ml  micro-proto.opam  mutez.mli  operation.ml  std_own.ml  value.ml
lib/: address.ml  address.mli  chain.ml  contract.ml  dune  error_monad.mli  micro_proto.ml  mutez.ml  mutez.mli  state.ml  time.ml  time.mli  value.ml
tests/: main.ml
vd/: std_own.ml
